--- a/analizador-xgot/src/main/resources/tfcc/registro.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/registro.fxml
@@ -9,7 +9,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/23.0.1"
            xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.shotvalue.front.RegistroController"
+           fx:controller="com.shotvalue.analizador_xgot.front.RegistroController"
            style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);">
 
     <VBox alignment="CENTER" spacing="12.0"
@@ -29,14 +29,18 @@
 
             <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Crear Cuenta" />
 
-            <Label text="Usuario:" />
             <TextField fx:id="usernameField" promptText="Introduce tu nombre de usuario" maxWidth="300"/>
+
+            <Label text="Correo electrónico:" />
+            <TextField fx:id="emailField" promptText="Introduce tu correo" maxWidth="300"/>
 
             <Label text="Contraseña:" />
             <PasswordField fx:id="passwordField" promptText="Introduce una contraseña" maxWidth="300"/>
 
             <Label text="Repite la contraseña:" />
             <PasswordField fx:id="repeatPasswordField" promptText="Confirma la contraseña" maxWidth="300"/>
+
+            <CheckBox fx:id="termsCheckBox" text="Acepto los términos y condiciones" maxWidth="300"/>
 
             <Button text="Registrarse" onAction="#handleRegister"
                     maxWidth="150"
