--- a/momentaneo/tfcc/perfil-view.fxml
+++ b/momentaneo/tfcc/perfil-view.fxml
@@ -20,7 +20,7 @@
                     <ImageView fx:id="avatarImage" fitWidth="180" fitHeight="180" preserveRatio="true"
                                style="-fx-effect: dropshadow(gaussian, black, 5, 0, 0, 0);">
                         <image>
-                            <Image url="@../img/avatar_placeholder.png"/>
+                            <Image url="@../../analizador-xgot/src/main/resources/img/avatar_placeholder.png"/>
                         </image>
                     </ImageView>
                     <Button text="Cambiar Imagen" fx:id="changeImageBtn"
