--- a/momentaneo/tfcc/registro-view.fxml
+++ b/momentaneo/tfcc/registro-view.fxml
@@ -72,7 +72,7 @@
             <Label text="Coordenadas" style="-fx-text-fill: white; -fx-font-weight: bold;"/>
             <ImageView fitWidth="400" fitHeight="200" preserveRatio="true">
                 <image>
-                    <Image url="@../img/field_placeholder.png" />
+                    <Image url="@../../analizador-xgot/src/main/resources/img/field_placeholder.png" />
                 </image>
             </ImageView>
         </children>
