--- a/analizador-xgot/src/main/resources/tfcc/app-layout.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/app-layout.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.analizador_xgot.front.MenuController">
+            fx:controller="com.shotvalue.analizador_xgot.front.AppController">
 
-    <left>
+<left>
         <VBox spacing="15" style="-fx-background-color: #0D3B66; -fx-padding: 20;">
             <Button fx:id="btnInicio" text="Inicio" maxWidth="Infinity"/>
             <Button fx:id="btnRegistrar" text="Registrar" maxWidth="Infinity"/>
