--- a/analizador-xgot/src/main/resources/tfcc/inicio-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/inicio-view.fxml
@@ -7,6 +7,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/23.0.1"
            xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.shotvalue.analizador_xgot.front.InicioController"
            style="-fx-background-color: #2E2E2E;">
 
     <VBox spacing="30" alignment="TOP_CENTER" maxWidth="1200"
