Modifico vista perfil para añadir el toggle de ver la contraseña y añado el nuevo logo

--- a/analizador-frontend/src/main/resources/tfcc/login.fxml
+++ b/analizador-frontend/src/main/resources/tfcc/login.fxml
@@ -19,7 +19,7 @@
 
       <ImageView fx:id="logoImage" fitWidth="130" preserveRatio="true">
          <image>
-            <Image url="@../img/logo.png" />
+            <Image url="@../img/ShotValue.png" />
          </image>
       </ImageView>
 
